--- a/package.json
+++ b/package.json
@@ -12,6 +12,18 @@
   },
   "private": true,
   "dependencies": {
+    "body-parser": "~1.18.2",
+    "bootstrap": "^4.0.0",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.15.5",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.3.1",
+    "mongoose": "^5.0.6",
+    "morgan": "~1.9.0",
+    "passport-local-mongoose": "^5.0.0",
+    "serve-favicon": "~2.4.5",
     "@angular/animations": "^5.2.0",
     "@angular/common": "^5.2.0",
     "@angular/compiler": "^5.2.0",
@@ -43,6 +55,9 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "@types/ejs": "^2.5.0",
+    "@types/express": "^4.11.0",
+    "@types/mongoose": "^5.0.2"
   }
 }
